--- a/topazz/templates/topazz/about.html
+++ b/topazz/templates/topazz/about.html
@@ -5,10 +5,10 @@
 
 {% block content %}
 
-            <header  class="header-center">
+            <header  class="header-about">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xs-4 col-sm-4">
                             <div class="d-flex mb-5" style="height: 60px;">
                                 <div style="font-size: 1.5rem; color: #ffcf00;"><i class="fas fa-map-marker"></i></div>
                                 <div class="align-self-start ml-2 ">
@@ -17,7 +17,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-4 col-sm-4">
                             <div class="d-flex mb-5" style="height: 60px;">
                                 <div style="font-size: 1.5rem; color: #800080;"><i class="fas fa-clock"></i></div>
                                 <div class="align-self-start ml-2 ">
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-4 col-sm-4">
                             <div class="d-flex mb-5" style="height: 60px;">
                                 <div style="font-size: 1.5rem; color: #ffcf00;"><i class="fas fa-phone"></i></div>
                                 <div class="align-self-start ml-2 ">
