--- a/topazz/templates/topazz/team-form.html
+++ b/topazz/templates/topazz/team-form.html
@@ -33,10 +33,10 @@
                 </select>
             </div>
             <div class="form-group">
-                <textarea class="form-control" placeholder="Description" name="description"></textarea>
+                <textarea class="form-control" placeholder="Description" name="description" required="required"></textarea>
             </div>
             <div class="custom-file mb-3">
-                <input type="file" class="custom-file-input" id="image" name="image" required>
+                <input type="file" class="custom-file-input" id="image" name="image" required="required">
                 <label class="custom-file-label" for="image">Choose Image...</label>
               </div>
             <div class="form-group">
