--- a/topazz/templates/topazz/about.html
+++ b/topazz/templates/topazz/about.html
@@ -135,25 +135,25 @@
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<blockquote class="blockquote d-block w-100">
-								<p class="review-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
 								<footer class="blockquote-footer text-center bigger-texts"><img src="{% static 'topazz/Images/user.png' %}" class="smaller-user">&nbsp;John Doe</footer>
 							</blockquote>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="blockquote">
-								<p class="review-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
 								<footer class="blockquote-footer text-center bigger-texts"><img src="{% static 'topazz/Images/user.png' %}" class="smaller-user">&nbsp;Sarah West</footer>
 							</blockquote>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="blockquote">
-								<p class="review-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
 								<footer class="blockquote-footer text-center bigger-texts"><img src="{% static 'topazz/Images/user.png' %}" class="smaller-user">&nbsp;Silas Stone</footer>
 							</blockquote>
 						</div>
 						<div class="carousel-item">
 							<blockquote class="blockquote">
-								<p class="review-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
+								<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime tenetur quaerat porro aliquam ab, architecto in placeat iure perferendis corporis quasi saepe commodi beatae, autem. Inventore, provident debitis officiis consectetur itaque amet, architecto ad molestiae asperiores magnam, quibusdam voluptatem pariatur?</p>
 								<footer class="blockquote-footer text-center bigger-texts"><img src="{% static 'topazz/Images/user.png' %}" class="smaller-user">&nbsp;John Doe</footer>
 							</blockquote>
 						</div>
