--- a/topazz/templates/topazz/base2.html
+++ b/topazz/templates/topazz/base2.html
@@ -56,4 +56,13 @@
 	<strong><p class="text-center mt-3">&copy; Mosadoluwa Agbonyin 2020</p></strong>
 </footer>
 
+<!-- <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> -->
+<!-- <script src="bootstrap/js/jquery-3.4.1.min.js"></script> -->
+<!-- <script src="bootstrap/js/popper.min.js"></script> -->
+<script src="{% static 'topazz/app.js' %}"></script>
+<!-- <script src="{% static 'fontawesome/js/all.min.js' %}"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 </html>
