--- a/topazz/templates/topazz/home.html
+++ b/topazz/templates/topazz/home.html
@@ -6,7 +6,7 @@
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-        <div class="alert  alert-success {{ message.tags }} alert-dismissible w-25 mt-2" role="alert">
+        <div class="alert  alert-success {{ message.tags }} alert-dismissible w-100 mt-2" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -21,7 +21,7 @@
         <p class="text-center"><a href="{% url 'add_team' %}"><button class="btn  btn-md btn-secondary mt-5">Add Team Member</button></a></p>
 
 
-        <table class="table table-striped mt-5 mb-5 table-active text-center">
+        <table class="table table-responsive table-striped mt-5 mb-5 table-active text-center table-texts">
             <caption>People who indicated interest</caption>
             <thead class="thead-light">
               <tr>
